--- a/src/plugins/show_help/template.html
+++ b/src/plugins/show_help/template.html
@@ -67,16 +67,17 @@
 <div class="container">
   <div class="title">帮助</div>
     <div class="content">
-    <div class="name">自动复读</div>
-    <div class="description">笨拙的复读</div>
+    <div class="name">抽签</div>
+    <div class="description">赛博浅草寺抽签！</div>
     <pre class="usage">
+普通命令:
+  抽签
+    抽一发，每个人每天抽到的都是一样的
+  抽签历史
+    查看自己的抽签历史
 管理员命令:
-  开启复读
-    开启此功能，需要at我
-  关闭复读
-    关闭此功能，需要at我
-  上一条
-    查看上一条发送的消息是谁发送的，需要at我
+  刷新抽签
+    刷新今日所有的抽签记录，需要超级用户权限
 </pre>
   </div><div class="content">
     <div class="name">抽老婆</div>
@@ -96,35 +97,6 @@ SUPERUSER命令:
   刷新抽老婆
     刷洗当日所有群聊的抽老婆数据
 </pre>
-  </div><div class="content">
-    <div class="name">csgo开箱模拟器</div>
-    <div class="description">无成本体验csgo的开箱!</div>
-    <pre class="usage">
-指令	                权限	    需要@	   范围	    说明
-open [数量] [名称]	群员	    否	       群聊	开启武器箱
-cases	            群员	    否	       群聊	查看所有武器箱
-svs	                群员	    否	       群聊	查看所有纪念包
-s_skins	            群员	    否	       群聊	搜索皮肤
-效果图
-</pre>
-  </div><div class="content">
-    <div class="name">抽签</div>
-    <div class="description">赛博浅草寺抽签！</div>
-    <pre class="usage">
-普通命令:
-  抽签
-    抽一发，每个人每天抽到的都是一样的
-  抽签历史
-    查看自己的抽签历史
-管理员命令:
-  刷新抽签
-    刷新今日所有的抽签记录，需要超级用户权限
-</pre>
-  </div><div class="content">
-    <div class="name">PicStatus</div>
-    <div class="description">以图片形式显示当前设备的运行状态</div>
-    <pre class="usage">指令：运行状态 / 状态 / yxzt / zt / status
-注意：仅SuperUser可以使用此指令</pre>
   </div><div class="content">
     <div class="name">词云</div>
     <div class="description">利用群消息生成词云</div>
@@ -166,6 +138,44 @@ s_skins	            群员	    否	       群聊	搜索皮肤
 /开启词云每日定时发送
 /开启词云每日定时发送 23:59
 /关闭词云每日定时发送</pre>
+  </div><div class="content">
+    <div class="name">csgo开箱模拟器</div>
+    <div class="description">无成本体验csgo的开箱!</div>
+    <pre class="usage">
+指令	                权限	    需要@	   范围	    说明
+open [数量] [名称]	群员	    否	       群聊	开启武器箱
+cases	            群员	    否	       群聊	查看所有武器箱
+svs	                群员	    否	       群聊	查看所有纪念包
+s_skins	            群员	    否	       群聊	搜索皮肤
+效果图
+</pre>
+  </div><div class="content">
+    <div class="name">帮你选！</div>
+    <div class="description">让麦昆帮你选！</div>
+    <pre class="usage">
+麦昆你[如何|怎么|怎么样]评价<选项1>和<选项2>
+  麦昆会给你两个选项的优劣！
+  但是麦昆思考的很慢，所以可能得很久！
+  而且每60秒才能使用一次哦！
+  这个时间不分群和私聊！
+</pre>
+  </div><div class="content">
+    <div class="name">自动复读</div>
+    <div class="description">笨拙的复读</div>
+    <pre class="usage">
+管理员命令:
+  开启复读
+    开启此功能，需要at我
+  关闭复读
+    关闭此功能，需要at我
+  上一条
+    查看上一条发送的消息是谁发送的，需要at我
+</pre>
+  </div><div class="content">
+    <div class="name">PicStatus</div>
+    <div class="description">以图片形式显示当前设备的运行状态</div>
+    <pre class="usage">指令：运行状态 / 状态 / yxzt / zt / status
+注意：仅SuperUser可以使用此指令</pre>
   </div>
 </div>
 </body>
